[gd_scene load_steps=7 format=3 uid="uid://cxxwjrmt5lpyx"]

[ext_resource type="Script" uid="uid://cehrgqn5cxgpr" path="res://components/ui/profile_creation/pronoun_entry_screen.gd" id="1_mdnml"]
[ext_resource type="Theme" uid="uid://cesgvqexxaqev" path="res://assets/windows_95_theme.tres" id="2_1jd2l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_68ei6"]
bg_color = Color(0, 0.270588, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jfqm6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8jskx"]
bg_color = Color(0.854255, 0.38934, 0.819727, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lj4co"]

[node name="PronounEntryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_mdnml")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "I like to be referred to as:"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BoyCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme_override_styles/hover = SubResource("StyleBoxFlat_68ei6")
theme_override_styles/normal = SubResource("StyleBoxFlat_jfqm6")
text = "\"Boy\" \"Dude\" \"Bro\" "

[node name="GirlCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme_override_styles/hover = SubResource("StyleBoxFlat_8jskx")
theme_override_styles/normal = SubResource("StyleBoxFlat_lj4co")
text = "\"Girl\" \"Bestie\" \"Lady\" "

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
mouse_filter = 2

[node name="CustomGender" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Something else: "

[node name="CustomPronounContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="CustomPronounLineEdit1" type="LineEdit" parent="MarginContainer/VBoxContainer/CustomPronounContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="CustomPronounLineEdit2" type="LineEdit" parent="MarginContainer/VBoxContainer/CustomPronounContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="CustomPronounLineEdit3" type="LineEdit" parent="MarginContainer/VBoxContainer/CustomPronounContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ManButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_1jd2l")
theme_override_font_sizes/font_size = 10
text = "I am not a \"boy,\" I am a man"

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(35, 25)
layout_mode = 2
mouse_filter = 2

[node name="WomanButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_1jd2l")
theme_override_font_sizes/font_size = 10
text = "I am not a \"girl,\" I am a woman"
